tests/lang_stmts/defer/tdefer_cannot_be_top_level.nim
discard """
  description: "Defer cannot be declared at the top level"
  errormsg: "defer statement not supported at top level"
  line: 7
"""

defer:
  discard